--- a/candy-crush-game-master/style.css
+++ b/candy-crush-game-master/style.css
@@ -27,7 +27,7 @@ body{
     padding: 10px;
     align-items: center;
     justify-content: center;
-    background: #FD3555;
+    background: #ff8cd1;
     margin-bottom: 20px;
     border-radius: 8px;
     font-family: sans-serif;
